# CRUD-practice

GO/: cleanup.sh  db.json  deployment.yaml  docker-compose.yaml  dockerfile  go.mod  go.sum  loadBalancer.yaml  main.go
GO/cmd/: main.go
GO/cmd/bosstrap/: boostrap.go
GO/internal/fileManager/: manger.go
GO/internal/server/: Server.go  handler.go  services.go
GO/internal/storage/: postRepository.go
GO/test/: hello_test.go
Java/CRUD/: Dockerfile  build.gradle  db.json  docker-compose.yml
Java/CRUD/prometheus/: prometheus.yml
Java/CRUD/src/main/java/com/example/crud/: Controller.java  CorsConfig.java  CrudApplication.java  FileManager.java  Services.java  Todos.java
Java/CRUD/src/main/java/com/example/crud/websocket/: Message.java  Status.java  WebSocketConfig.java  controllerSocket.java
Java/CRUD/src/main/resources/: application.properties
TypeScript/express/: index.ts  package-lock.json  package.json
frontEnd/spiffy-series/: package-lock.json  package.json
frontEnd/spiffy-series/src/components/: Card.astro
frontEnd/spiffy-series/src/pages/: index.astro
python/django/: pyproject.toml
python/django/crud/crud/: settings.py  urls.py
python/django/crud/hello/: urls.py  views.py
python/fastApi/: auth.py  auth_routes.py  db.json  domain.py  file_manager.py  main.py  model.py  pyproject.toml  routes.py  services_post.py
